--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy=1.20.3
-pandas=1.1.2
-sklearn=0.23.2
-torch=1.9.0
-scipy=1.5.2
-umap=0.4.6
+numpy==1.20.3
+pandas==1.1.2
+scikit-learn==0.23.2
+torch==1.9.0
+scipy==1.5.2
+umap-learn==0.5.2
