--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
+joblib==1.1.0
+llvmlite==0.37.0
+numba==0.54.1
 numpy==1.20.3
 pandas==1.1.2
+pynndescent==0.5.5
+python-dateutil==2.8.2
+pytz==2021.3
 scikit-learn==0.23.2
-torch==1.9.0
 scipy==1.5.2
+six==1.16.0
+threadpoolctl==3.0.0
+torch==1.9.0
+tqdm==4.62.3
+typing_extensions==4.0.1
 umap-learn==0.5.2
