--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,80 @@
+appnope==0.1.2
+argcomplete==1.12.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+attrs==21.2.0
+backcall==0.2.0
+bleach==4.1.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.9
+cycler==0.11.0
+debugpy==1.5.1
+decorator==5.1.0
+defusedxml==0.7.1
+entrypoints==0.3
+idna==3.3
+importlib-metadata==4.9.0
+importlib-resources==5.4.0
+ipykernel==6.6.0
+ipython==7.30.1
+ipython-genutils==0.2.0
+jedi==0.18.1
+Jinja2==3.0.3
 joblib==0.16.0
+json5==0.9.6
+jsonschema==4.3.1
+jupyter-client==7.1.0
+jupyter-core==4.9.1
+jupyterlab==2.2.9
+jupyterlab-pygments==0.1.2
+jupyterlab-server==1.2.0
+kiwisolver==1.3.2
 llvmlite==0.35.0
+MarkupSafe==2.0.1
+matplotlib==3.4.2
+matplotlib-inline==0.1.3
+mistune==0.8.4
+nbclient==0.5.9
+nbconvert==6.3.0
+nbformat==5.1.3
+nest-asyncio==1.5.4
+notebook==6.4.6
 numba==0.52.0
 numpy==1.20.3
+packaging==21.3
 pandas==1.1.2
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.4.0
+prometheus-client==0.12.0
+prompt-toolkit==3.0.24
+ptyprocess==0.7.0
+pycparser==2.21
+Pygments==2.10.0
+pyparsing==3.0.6
+pyrsistent==0.18.0
 python-dateutil==2.8.0
 pytz==2018.9
+pyzmq==22.3.0
+requests==2.26.0
 scikit-learn==0.23.2
 scipy==1.5.2
+seaborn==0.10.1
+Send2Trash==1.8.0
 six==1.12.0
+terminado==0.12.1
+testpath==0.5.0
 threadpoolctl==2.1.0
 torch==1.9.0
+tornado==6.1
 tqdm==4.47.0
-typing_extensions==3.7.4.3
+traitlets==5.1.1
+typing-extensions==3.7.4.3
 umap-learn==0.4.6
+urllib3==1.26.7
+wcwidth==0.2.5
+webencodings==0.5.1
+zipp==3.6.0
