--- a/requirements.txt
+++ b/requirements.txt
@@ -64,7 +64,9 @@ jinja2==3.0.3
     #   nbconvert
     #   notebook
 joblib==1.1.0
-    # via scikit-learn
+    # via
+    #   pynndescent
+    #   scikit-learn
 json5==0.9.6
     # via jupyterlab-server
 jsonschema==4.3.1
@@ -91,7 +93,9 @@ jupyterlab-server==1.2.0
 kiwisolver==1.3.2
     # via matplotlib
 llvmlite==0.37.0
-    # via numba
+    # via
+    #   numba
+    #   pynndescent
 markupsafe==2.0.1
     # via jinja2
 matplotlib==3.4.2
@@ -123,7 +127,9 @@ notebook==6.4.6
     #   jupyterlab
     #   jupyterlab-server
 numba==0.54.1
-    # via umap-learn
+    # via
+    #   pynndescent
+    #   umap-learn
 numpy==1.20.3
     # via
     #   -r requirements.in
@@ -165,6 +171,8 @@ pygments==2.10.0
     #   ipython
     #   jupyterlab-pygments
     #   nbconvert
+pynndescent==0.5.5
+    # via umap-learn
 pyparsing==3.0.6
     # via
     #   matplotlib
@@ -187,10 +195,12 @@ requests==2.26.0
 scikit-learn==0.23.2
     # via
     #   -r requirements.in
+    #   pynndescent
     #   umap-learn
 scipy==1.5.2
     # via
     #   -r requirements.in
+    #   pynndescent
     #   scikit-learn
     #   seaborn
     #   umap-learn
@@ -217,6 +227,8 @@ tornado==6.1
     #   jupyterlab
     #   notebook
     #   terminado
+tqdm==4.62.3
+    # via umap-learn
 traitlets==5.1.1
     # via
     #   ipykernel
@@ -234,7 +246,7 @@ typing-extensions==4.0.1
     #   importlib-metadata
     #   jsonschema
     #   torch
-umap-learn==0.4.6
+umap-learn==0.5.2
     # via -r requirements.in
 urllib3==1.26.7
     # via requests
