--- a/requirements.in
+++ b/requirements.in
@@ -1,7 +1,9 @@
 jupyterlab==2.2.9
 matplotlib==3.4.2
 numpy==1.20.3
+notebook==6.4.10
 pandas==1.1.2
+pillow==9.0.1
 scikit-learn==0.23.2
 scipy==1.5.2
 seaborn==0.10.1
