--- a/requirements.txt
+++ b/requirements.txt
@@ -4,60 +4,57 @@
 #
 #    pip-compile requirements.in
 #
-appnope==0.1.2
+appnope==0.1.3
     # via
     #   ipykernel
     #   ipython
-argcomplete==1.12.3
-    # via ipykernel
 argon2-cffi==21.3.0
     # via notebook
 argon2-cffi-bindings==21.2.0
     # via argon2-cffi
-attrs==21.2.0
+attrs==21.4.0
     # via jsonschema
 backcall==0.2.0
     # via ipython
-bleach==4.1.0
+beautifulsoup4==4.11.1
     # via nbconvert
-certifi==2021.10.8
+bleach==5.0.0
+    # via nbconvert
+certifi==2022.5.18.1
     # via requests
 cffi==1.15.0
     # via argon2-cffi-bindings
-charset-normalizer==2.0.9
+charset-normalizer==2.0.12
     # via requests
 cycler==0.11.0
     # via matplotlib
-debugpy==1.5.1
+debugpy==1.6.0
     # via ipykernel
-decorator==5.1.0
+decorator==5.1.1
     # via ipython
 defusedxml==0.7.1
     # via nbconvert
-entrypoints==0.3
+entrypoints==0.4
     # via
     #   jupyter-client
     #   nbconvert
+fastjsonschema==2.15.3
+    # via nbformat
 idna==3.3
     # via requests
-importlib-metadata==4.9.0
-    # via
-    #   argcomplete
-    #   ipykernel
-    #   jsonschema
-importlib-resources==5.4.0
+importlib-metadata==4.11.3
     # via jsonschema
-ipykernel==6.6.0
+importlib-resources==5.7.1
+    # via jsonschema
+ipykernel==6.13.0
     # via notebook
-ipython==7.30.1
+ipython==7.33.0
     # via ipykernel
 ipython-genutils==0.2.0
-    # via
-    #   nbformat
-    #   notebook
+    # via notebook
 jedi==0.18.1
     # via ipython
-jinja2==3.0.3
+jinja2==3.1.2
     # via
     #   jupyterlab
     #   jupyterlab-server
@@ -67,18 +64,18 @@ joblib==1.1.0
     # via
     #   pynndescent
     #   scikit-learn
-json5==0.9.6
+json5==0.9.8
     # via jupyterlab-server
-jsonschema==4.3.1
+jsonschema==4.5.1
     # via
     #   jupyterlab-server
     #   nbformat
-jupyter-client==7.1.0
+jupyter-client==7.3.1
     # via
     #   ipykernel
     #   nbclient
     #   notebook
-jupyter-core==4.9.1
+jupyter-core==4.10.0
     # via
     #   jupyter-client
     #   nbconvert
@@ -86,18 +83,20 @@ jupyter-core==4.9.1
     #   notebook
 jupyterlab==2.2.9
     # via -r requirements.in
-jupyterlab-pygments==0.1.2
+jupyterlab-pygments==0.2.2
     # via nbconvert
 jupyterlab-server==1.2.0
     # via jupyterlab
-kiwisolver==1.3.2
+kiwisolver==1.4.2
     # via matplotlib
-llvmlite==0.37.0
+llvmlite==0.38.1
     # via
     #   numba
     #   pynndescent
-markupsafe==2.0.1
-    # via jinja2
+markupsafe==2.1.1
+    # via
+    #   jinja2
+    #   nbconvert
 matplotlib==3.4.2
     # via
     #   -r requirements.in
@@ -108,25 +107,27 @@ matplotlib-inline==0.1.3
     #   ipython
 mistune==0.8.4
     # via nbconvert
-nbclient==0.5.9
+nbclient==0.6.3
     # via nbconvert
-nbconvert==6.3.0
+nbconvert==6.5.0
     # via notebook
-nbformat==5.1.3
+nbformat==5.4.0
     # via
     #   nbclient
     #   nbconvert
     #   notebook
-nest-asyncio==1.5.4
+nest-asyncio==1.5.5
     # via
+    #   ipykernel
     #   jupyter-client
     #   nbclient
     #   notebook
-notebook==6.4.6
+notebook==6.4.10
     # via
+    #   -r requirements.in
     #   jupyterlab
     #   jupyterlab-server
-numba==0.54.1
+numba==0.55.1
     # via
     #   pynndescent
     #   umap-learn
@@ -141,7 +142,9 @@ numpy==1.20.3
     #   seaborn
     #   umap-learn
 packaging==21.3
-    # via bleach
+    # via
+    #   ipykernel
+    #   nbconvert
 pandas==1.1.2
     # via
     #   -r requirements.in
@@ -154,43 +157,46 @@ pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
-pillow==8.4.0
-    # via matplotlib
-prometheus-client==0.12.0
+pillow==9.0.1
+    # via
+    #   -r requirements.in
+    #   matplotlib
+prometheus-client==0.14.1
     # via notebook
-prompt-toolkit==3.0.24
+prompt-toolkit==3.0.29
     # via ipython
+psutil==5.9.0
+    # via ipykernel
 ptyprocess==0.7.0
     # via
     #   pexpect
     #   terminado
 pycparser==2.21
     # via cffi
-pygments==2.10.0
+pygments==2.12.0
     # via
     #   ipython
-    #   jupyterlab-pygments
     #   nbconvert
-pynndescent==0.5.5
+pynndescent==0.5.7
     # via umap-learn
-pyparsing==3.0.6
+pyparsing==3.0.9
     # via
     #   matplotlib
     #   packaging
-pyrsistent==0.18.0
+pyrsistent==0.18.1
     # via jsonschema
 python-dateutil==2.8.2
     # via
     #   jupyter-client
     #   matplotlib
     #   pandas
-pytz==2021.3
+pytz==2022.1
     # via pandas
-pyzmq==22.3.0
+pyzmq==23.0.0
     # via
     #   jupyter-client
     #   notebook
-requests==2.26.0
+requests==2.27.1
     # via jupyterlab-server
 scikit-learn==0.23.2
     # via
@@ -212,12 +218,14 @@ six==1.16.0
     # via
     #   bleach
     #   python-dateutil
-terminado==0.12.1
+soupsieve==2.3.2.post1
+    # via beautifulsoup4
+terminado==0.15.0
     # via notebook
-testpath==0.5.0
-    # via nbconvert
-threadpoolctl==3.0.0
+threadpoolctl==3.1.0
     # via scikit-learn
+tinycss2==1.1.1
+    # via nbconvert
 torch==1.9.0
     # via -r requirements.in
 tornado==6.1
@@ -227,9 +235,9 @@ tornado==6.1
     #   jupyterlab
     #   notebook
     #   terminado
-tqdm==4.62.3
+tqdm==4.64.0
     # via umap-learn
-traitlets==5.1.1
+traitlets==5.2.1.post0
     # via
     #   ipykernel
     #   ipython
@@ -240,21 +248,24 @@ traitlets==5.1.1
     #   nbconvert
     #   nbformat
     #   notebook
-typing-extensions==4.0.1
+typing-extensions==4.2.0
     # via
     #   argon2-cffi
     #   importlib-metadata
     #   jsonschema
+    #   kiwisolver
     #   torch
 umap-learn==0.5.2
     # via -r requirements.in
-urllib3==1.26.7
+urllib3==1.26.9
     # via requests
 wcwidth==0.2.5
     # via prompt-toolkit
 webencodings==0.5.1
-    # via bleach
-zipp==3.6.0
+    # via
+    #   bleach
+    #   tinycss2
+zipp==3.8.0
     # via
     #   importlib-metadata
     #   importlib-resources
